# basedcast

./: .dockerignore  .env  .env.example  .envrc  .gitignore  Cargo.toml  Dockerfile  Dockerfile.build  Dockerfile.radioscan.build  Jenkinsfile  OpenAPI.yaml  README.md  api.py  diesel.toml  flake.nix  main  settings.toml  settings.toml.example  shell.nix
.github/workflows/: docker-image.yml  nix.yml
api/: Cargo.toml  Dockerfile  Dockerfile.build
api/src/: app.rs  lib.rs  main.rs
api/src/db/: mod.rs  schema.rs
api/src/db/enums/: mod.rs  system.rs
api/src/db/models/: mod.rs  song.rs
api/src/graphql/schema/: mod.rs  mutation.rs  query.rs  song.rs
core/: Cargo.toml
core/src/: db.rs.old  lib.rs  models.rs.old  mpdctl.rs  radiofiles.rs.old  settings.rs
core/src/handlers/: songs.rs
core/src/models/: mod.rs  song.rs
core/src/models.old/: mod.rs  song.rs
migrations/2021-03-18-002700_create_media/: down.sql  up.sql
migrations/2021-03-18-002700_create_songs/: down.sql  up.sql
nix/: sources.json
radioscan/: Cargo.toml  Dockerfile  Dockerfile.build
radioscan/src/: main.rs
src/: db.rs  main.rs  media.rs  models.rs  mpdctl.rs  radiofiles.rs  schema.rs
src/handlers/: mod.rs  songs.rs
src/models/: mod.rs  song.rs
web/: node-packages.nix  package.json  yarn.nix
web/src/: App.js
