[package]
name = "basedcast"
version = "0.1.0"
authors = ["Rpgwaiter <rpgwaiter+git@based.zone>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpd = "*"

diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
serde = "1.0.125"
rocket = "0.4.7"
r2d2_postgres = "0.18.0"
dotenv = "0.15.0"
globwalk = "0.8.1"
metadata = "0.1.6"
regex = "1.4.5"
pbr = "1.0.3"
rayon = "1.5.0"
#uuid = { version = "0.8.2", features = ["v4"] }
