[workspace]
members = [ "core", "radioscan", "api" ]

[workspace.metadata.nix]
systems = ["x86_64-linux"]
cCompiler = "clang"

[workspace.metadata.nix.devshell]
packages = [
    "diesel-cli", 
    "cargo-make", 
    "wasm-pack", 
    "nodePackages.rollup",
    # "nodePackages.npm",
    # "nodePackages.node2nix",
    "cargo-generate",
    "nodejs-16_x",
    "yarn",
    "yarn2nix"
    ]
