[package]
name = "basedcast_api"
version = "0.1.0"
edition = "2018"

[lib]
name = "basedcast_api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
basedcast_core = { path = "../core" }
dotenv = "0.15.0"
itconfig = { version = "1", features = ["macro"] }
rocket = "0.4.2"
diesel = { version = "1.4.3", features = ["postgres", "r2d2"] }
# diesel-derive-enum = { version = "0.4", features = ["postgres"] }
juniper = "0.14.1"
juniper_rocket = "0.5.1"
lazy_static = "1.4.0"

[package.metadata.nix]
build = true
library = true
