[package]
name = "basedcast_core"
license = "gpl3"
version = "0.1.0"
edition = "2018"
authors = ["Rpgwaiter <rpgwaiter+git@based.zone>"]

[lib]
name = "basedcast_core"

[dependencies]
mpd = "*"

toml = "0.5"

wasm-pack = "0.9.1"

diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
diesel-derive-enum = { version = "1", features = ["postgres"] }
serde = { version = "1.0.80", features = ["derive"] }
serde_derive  = "1.0.80"
serde_json = "1.0.32"
itconfig = { version = "1", features = ["macro"] }
lazy_static = "1.4.0"

actix-web = "3.3.2"

rocket = "0.4.7"
r2d2_postgres = "0.18.0"
r2d2 = "0.8.9"
rayon = "1.5.0"
linya = "0.1.1"
#uuid = { version = "0.8.2", features = ["v4"] }
juniper = "0.15.4"

globwalk = "0.8.1"
metadata = "0.1.6"
regex = "1.4.5"
diesel_full_text_search = "1"