[package]
name = "radioscan"
license = "gpl3"
version = "0.1.0"
edition = "2018"
authors = ["Rpgwaiter <rpgwaiter+git@based.zone>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
basedcast_core = { path = "../core" }
mpd = "*"

diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
serde = { version = "1.0.80", features = ["derive"] }
serde_derive  = "1.0.80"
serde_json = "1.0.32"

r2d2_postgres = "0.18.0"
r2d2 = "0.8.9"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
globwalk = "0.8.1"
metadata = "0.1.6"
regex = "1.4.5"
rayon = "1.5.0"
linya = "0.1.1"
#uuid = { version = "0.8.2", features = ["v4"] }


[package.metadata.nix]
# Toggle app flake output
app = true
# Toggle flake outputs that build (checks, package and app)
build = true
# Whether to copy built library to package output
library = false
# Toolchain to be used
toolchain = "nightly"