[package]
name = "radioscan"
license = "gpl3"
version = "0.1.0"
edition = "2018"
authors = ["Rpgwaiter <rpgwaiter+git@based.zone>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
basedcast_api = { path = "../api" }
basedcast_core = { path = "../core" }
mpd = "*"

id3 = "0.6.4"
mp3-duration = "0.1.10"
checksums = "0.9.0"

globwalk = "0.8.1"
regex = "1.5.4"

indicatif = { version = "0.16.2" }
#uuid = { version = "0.8.2", features = ["v4"] }

rayon = { version = "1.5.1" }


[package.metadata.nix]
app = true
build = true
